<resources>
    <string name="app_name">&appname;</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="choose">Choose…</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="continue_txt">Continue</string>
    <string name="finish">Finish</string>
    <string name="save">Save</string>
    <string name="well_done">We Appreciate\nYour Cooperation!</string>
    <string name="leave_note">Leave a Note</string>
    <string name="leave_note_info">The Therapist will See Your Messages Only When the Meeting Begins</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="character">Character</string>
    <string name="feelings">Feelings</string>
    <string name="slider_min_max_prompt">Rank Your Feeling in the Past 7 Days So That 0 is Weak and 10 is Strong</string>
    <string name="appointments_date">Appointment\'s Date</string>
    <string name="edit_appointment_title">Edit Appointment</string>
    <string name="pain_point_deletion_prompt">Are You Sure You Want To Permanently Delete This Point?</string>
    <string name="pain_point_deleted_prompt">Point Deleted Successfully!</string>
    <string name="appointment_deletion_prompt">Are You Sure You Want to Permanently Delete This Appointment?</string>
    <string name="document_deletion_prompt">Are You Sure You Want to Permanently Delete This Document?</string>
    <string name="appointment_added_prompt">Appointment Added Successfully!</string>
    <string name="appointment_updated_prompt">Appointment Updated Successfully!</string>
    <string name="appointment_deleted_prompt">Appointment Deleted Successfully!</string>
    <string name="create_appointment">Create Appointment</string>
    <string name="search_patient">Search Patient</string>
    <string name="patient_email">Patient Email</string>
    <string name="patient_name">Patient Name</string>
    <string name="patient_not_found">Patient Not Found</string>
    <string name="patient_found_prompt">Patient Found:</string>
    <string name="invite_patient">Invite Patient</string>
    <string name="patient_history">Patient History</string>
    <string name="appointments_history">Appointments History</string>
    <string name="inquiry">Inquiry</string>
    <string name="meeting_expectations">Meeting Expectations</string>
    <string name="covid">COVID-19</string>
    <string name="habits_title">Weight, Height, Habits</string>
    <string name="social_Status">Social Status</string>
    <string name="statements">Statements</string>
    <string name="mental_functioning">Mental Functioning</string>
    <string name="anxiety">Anxiety</string>
    <string name="anger">Anger</string>
    <string name="depression">Depression</string>
    <string name="no_answers_prompt">No Answers to Display…</string>
    <string name="undo">Undo</string>
    <string name="answer_et_hint">Type Your Answer Here</string>
    <string name="details_et_hint">Details</string>
    <string name="long_meeting_prompt">I Want a Long Meeting</string>
    <string name="short_meeting_prompt">I Want a Short Meeting</string>
    <string name="another_person_prompt">I Want Another Person to Be Present with Me During the Meeting</string>
    <string name="pre_meeting_char_frag_title">What Would You Like to Share?</string>
    <string name="pre_meeting_char_frag_sub_title">Click the Character</string>
    <string name="start_meeting">Start Meeting</string>
    <string name="start_meeting_title">Start Meeting?</string>
    <string name="start_meeting_prompt">Meeting That Started Can Not Be Canceled. Are You Sure You Want to Start This Meeting?</string>
    <string name="statement_frag_title_tv">Choose Phrases Which You Relate to:</string>
    <string name="choose_phrases_last_week">Choose Phrases Which You Relate to in the Past 7 Days:</string>
    <string name="questions_warning_frag_title_tv">In The Next Pages You will Be Presented to a Series of Questions.\n\nPlease Try to Answer as Many as You Can In Order For the Therapist to Understand Better Your Needs.</string>
    <string name="share_your_feelings">Share Your Feelings</string>
    <string name="chat_with_therapist">Chat with Therapist</string>
    <string name="what_would_you_like_to_share">What Would You Like to Share?</string>
    <string name="do_you_feel_pain">Do You Feel Any Physical Discomfort?</string>
    <string name="select_body_part">Select Body Part</string>
    <string name="home_screen">Home Screen</string>
    <string name="describe_your_issues_here">Describe Your Issues Here…</string>
    <string name="other_pain_point_selection_warning_title">Change Point?</string>
    <string name="other_pain_point_selection_warning">Are You Sure You Want to Select Other Point?</string>
    <string name="choose_pain_area">Choose Discomfort Area</string>
    <string name="left_right_dlg_title">I Meant to Choose:</string>
    <string name="left_right_dlg_only_one_rb">Only One Side</string>
    <string name="left_right_dlg_both_rb">Both</string>
    <string name="mandatory_questions_warning">Please Answer all the Mandatory Questions (Marked with * )</string>
    <string name="mandatory_tv">Mandatory Questions are Marked with</string>
    <string name="things_i_need_today_prompt">Things I Need Today:</string>
    <string name="my_meetings">My Meetings</string>
    <string name="physical_state">Physical State</string>
    <string name="empty_pain_points_list_prompt">No Physical State Details to Show…</string>
    <string name="empty_history_list_prompt">This Patient Has No Previous Appointments…</string>
    <string name="no_last_appointment">You Don\'t have any Previous Appointments…</string>
    <string name="appointment">Appointment</string>
    <string name="appointment_prompt">Appointment:</string>
    <string name="patient">Patient</string>
    <string name="patient_prompt">Patient:</string>
    <string name="therapist">Therapist</string>
    <string name="therapist_prompt">Therapist:</string>
    <string name="date_prompt">Date:</string>
    <string name="time_prompt">Time:</string>
    <string name="pending_questionnaire">Pending Questionnaire</string>
    <string name="undone_questionnaire">Undone</string>
    <string name="questionnaire_done">Done</string>
    <string name="upcoming">Upcoming</string>
    <string name="upcoming_meetings_prompt">Upcoming Meetings:</string>
    <string name="begin">Begin</string>
    <string name="enter">Enter</string>
    <string name="enter_message">Enter Message</string>
    <string name="end_meeting">End Meeting</string>
    <string name="end_meeting_question">End Meeting?</string>
    <string name="end_meeting_msg">Pressing OK will End This Meeting for You and for the Patient</string>
    <string name="last_meeting_date_prompt">Last Meeting Date:</string>
    <string name="last_meeting_therapist_name_prompt">Last Meeting Therapist:</string>
    <string name="back_to_appointments">Back to Appointments</string>
    <string name="edit_answers">Edit Answers</string>
    <string name="meeting_ended_dlg_title">Your Meeting has Ended</string>
    <string name="meeting_ended_dlg_prompt">The Therapist has Ended Your Meeting</string>
    <string name="pain_location_tv">Location:</string>
    <string name="pain_strength_tv">Strength:</string>
    <string name="pain_type_tv">Type:</string>
    <string name="pain_frequency_tv">Frequency:</string>
    <string name="other_feelings_tv">Other Feelings:</string>
    <string name="description_tv">Description:</string>
    <string name="chat">Chat</string>
    <string name="mental_state">Mental State</string>
    <string name="meeting_summary">Meeting Summary</string>
    <string name="last_meeting_summary">Last Meeting Summary</string>
    <string name="feeling_strength_tv">Feeling Strength:</string>
    <string name="never">Never</string>
    <string name="rarely">Rarely</string>
    <string name="sometimes">Sometimes</string>
    <string name="often">Often</string>
    <string name="always">Always</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="diagnosis_prompt">Diagnosis:</string>
    <string name="diagnosis_warning">Will not be shown to your patient</string>
    <string name="no_diagnosis">No Diagnosis</string>
    <string name="recommendations">Recommendations</string>
    <string name="recommendations_prompt">Recommendations:</string>
    <string name="recommendations_warning">These recommendations will be shown to your patient by the end of this meeting</string>
    <string name="no_recommendations">No Recommendations</string>
    <string name="last_meeting_recommendations">Last Meeting\'s Recommendations</string>
    <string name="add_document">Add a Document</string>
    <string name="no_documents">No Documents\nto Display</string>
    <string name="sharp">Sharp</string>
    <string name="dim">Dim</string>
    <string name="pressing">Pressing</string>
    <string name="burning">Burning</string>
    <string name="no_pain">No Pain</string>
    <string name="bleeding">Bleeding</string>
    <string name="itching">Itching</string>
    <string name="sting">Sting</string>
    <string name="strange">Strange</string>
    <string name="numb">Numb</string>
    <string name="color_change">Color Change</string>
    <string name="dryness">Dryness</string>
    <string name="tears_excess">Tears Excess</string>
    <string name="constipation">Constipation</string>
    <string name="diarrhea">Diarrhea</string>
    <string name="heartburn">Heartburn</string>
    <string name="drooling">Drooling</string>
    <string name="urinary_retention">Urinary Retention</string>
    <string name="frequent_urinary">Frequent Urinary</string>
    <string name="urgent_urinary">Urgent Urinary</string>
    <string name="other">Other</string>
    <string name="wavy">Wavy</string>
    <string name="static_pain">Static</string>
    <string name="getting_worse">Getting Worse</string>
    <string name="getting_better">Getting Better</string>
    <string name="add_patient_action">Add Patient</string>
    <string name="recommendation_drawer">Therapist\'s Recommendation</string>
    <string name="documents">Documents</string>
    <string name="logout">Logout</string>
    <string name="add_new_patient">Add New Patient</string>
    <string name="email">Email</string>
    <string name="email_prompt">Email:</string>
    <string name="hello">Hello</string>
    <string name="pre_questions_tv_2">We Are Here For You.</string>
    <string name="answer_questions_title">Please Answer the Following Questions (Regarding the Past Week):</string>
    <string name="last_meeting_recommendation">Last Meeting Recommendation</string>
    <string name="follow_recommendations">I followed the recommendations</string>
    <string name="follow_partially_recommendations">I followed partially</string>
    <string name="didnt_follow_recommendations">I did not follow the recommendations</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="about_us_content">
        "&appname; is an application for mental patients.\n\n"
        "We sincerely hope you find our app useful."
    </string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_content" translatable="false">&app_email;</string>
    <string name="contact_app_uri" translatable="false">mailto:&app_email;</string>
    <string name="copyrights">Copyrights</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="version">Version</string>
    <string name="app_version" translatable="false">2.7.7.6</string>
    <string name="pharynx">Pharynx</string>
    <string name="tongue">Tongue</string>
    <string name="palate">Palate</string>
    <string name="teeth">Teeth</string>
    <string name="lips">Lips</string>
</resources>