<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/white"
    android:animateLayoutChanges="true"
    tools:context=".view.patient.RecommendationQuestionsFragment">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/last_meeting_recommendation" />

    <ScrollView
        android:id="@+id/main_scroll_view"
        android:layout_below="@+id/title_tv"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/recommendations_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="6"
            android:padding="10dp"
            android:background="@drawable/summary_et_shape"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textAllCaps="false"
             />


    </ScrollView>

    <RadioGroup
        android:id="@+id/recommendations_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_scroll_view"
        android:layout_marginTop="20dp">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/follow_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:tag="1"
            android:text="@string/follow_recommendations"
            android:textSize="17sp"
            android:textColor="@color/black" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/partially_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:tag="10"
            android:text="@string/follow_partially_recommendations"
            android:textSize="17sp"
            android:textColor="@color/black" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/didnt_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:tag="10"
            android:text="@string/didnt_follow_recommendations"
            android:textSize="17sp"
            android:textColor="@color/black" />

    </RadioGroup>

    <EditText
        android:id="@+id/details_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recommendations_rg"
        android:layout_marginTop="10dp"
        android:gravity="start|top"
        android:layout_gravity="center"
        android:layout_marginHorizontal="5dp"
        android:hint="@string/details_et_hint"
        android:lines="5"
        android:padding="10dp"
        android:visibility="gone"
        android:background="@drawable/summary_et_shape" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_btn"
        android:layout_below="@id/details_et"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="35dp"
        android:text="@string/continue_txt"
        style="@style/blue_btn" />

</RelativeLayout>