<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".view.EditAppointmentDialogFragment">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/edit_appointment_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/dark_gray"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/patient_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:text="Matan"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/dark_gray"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/patient_name_tv"
        android:layout_above="@id/finish_btn"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/date_dialog_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/pick_date"
            android:textSize="20sp"
            android:textColor="@color/dark_gray"
            android:textAllCaps="false"
            android:padding="15dp"
            android:background="@drawable/text_view_border" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/time_dialog_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:hint="@string/pick_time"
            android:textSize="20sp"
            android:textColor="@color/dark_gray"
            android:textAllCaps="false"
            android:padding="15dp"
            android:background="@drawable/text_view_border" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/finish_btn"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/finish"
        style="@style/blue_btn" />

</RelativeLayout>