<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/white"
    android:animateLayoutChanges="true"
    tools:context=".view.patient.SocialQuestionsFragment">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/answer_questions_title"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@id/title_tv"
        android:id="@+id/questions_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:layout_above="@id/buttons_layout"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_btn"
            android:text="@string/back"
            android:layout_weight="1"
            android:layout_marginEnd="30dp"
            style="@style/blue_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_btn"
            android:text="@string/continue_txt"
            android:layout_weight="1"
            style="@style/blue_btn" />

    </LinearLayout>

</RelativeLayout>